--- a/NEURODASH/assets/css/utilities/text.css
+++ b/NEURODASH/assets/css/utilities/text.css
@@ -90,6 +90,13 @@
     color: #ffdb2b;
     font-size: 50px;
   }
+
+  .fontSalascr{
+    font-family: 'Jersey';
+    color: #ffdb2b;
+    font-size: 50px;
+  }
+
   .fontSalas2{
     font-family: 'Jersey';
     color: #ffdb2b;
