union-sala-complete

--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -65,7 +65,7 @@
                 <div class="content">
                     <h3>¿No tienes cuenta?</h3>
                     <p>Regístrate en NeuroDash y empieza a jugar ahora.</p>
-                    <button class="btn" id="sign-up-btn">Registrarse</button>
+                    <button class="btn sound-sys" id="sign-up-btn">Registrarse</button>
                 </div>
             </div>
         </div>
