--- a/NEURODASH/assets/css/pages/salaEspera.css
+++ b/NEURODASH/assets/css/pages/salaEspera.css
@@ -78,9 +78,9 @@
 }
 
 .contenedor-hexagonos .hexagonos {
-    opacity: 0;
+    opacity: 1;
     transform: translateY(20px);
-    animation: slide-in 0.8s forwards;
+    /* animation: slide-in 0.8s forwards; */
 }
 
 @keyframes slide-in {
