--- a/NEURODASH/assets/css/pages/configuraciones.css
+++ b/NEURODASH/assets/css/pages/configuraciones.css
@@ -140,15 +140,23 @@
 .edit-name-perfil{
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px;
+    gap: 10px;
 }
 
 .edit-name-perfil img{
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
+    padding: 5px;
+    width: 125px;
+    height: 125px;
+    border-radius: 100px;
+    object-fit: cover;
+    background-color: aqua;
 }
-
+.edit-name-perfil img:hover{
+    background-color: #383e4b7b;
+    backdrop-filter: blur(10px);
+}
 .delete-perfli{
     display: grid;
     grid-template-columns: 1fr;
