--- a/NEURODASH/assets/css/pages/profile.css
+++ b/NEURODASH/assets/css/pages/profile.css
@@ -61,7 +61,31 @@
     gap: 10px;
 }
 
+.edit{
+    color: #00CFFF;
+    position: relative;
+    left: 60%;
+    bottom:30px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    padding: 10px;
+    font-size: 18px;
+}
+.avatar-edit{
+    display: flex;
+    flex-direction: column;
+}
+/* Mostrar el ícono en hover */
+.avatar-edit:hover .edit-icon {
+    display: block;
+}
+
+/* Opcional: efecto de zoom en la imagen al hacer hover */
+.avatar-edit:hover img {
+    transform: scale(1.05);
+}
 .avatar-option {
+    border: 3px solid #A452FF;
     border-radius: 50%;
     margin: 10px;
     width: 70px;
@@ -73,16 +97,25 @@
     background-color: lightblue;
 }
 
-.avatar-option:active {
+.avatar-option:hover{
     transform: scale(1.2);
+    box-shadow: 0 4px 15px #FF007F;
 }
 
 .avatar-option.active-scale {
     transform: scale(1.2);
+    box-shadow: 0 4px 15px #00CFFF;
 }
 
 @media only screen and (max-width: 769px){
     .modal-profile-content {
         overflow-y: scroll;
+    }
+}
+
+@media only screen and (max-width: 428px) and (max-height: 926px) {
+    .edit{
+        left: 65%;
+        bottom:30px;
     }
 }
