--- a/NEURODASH/views/entrenamiento/rondas.html
+++ b/NEURODASH/views/entrenamiento/rondas.html
@@ -111,6 +111,56 @@
                     </div>
                 </div>
 
+                <!-- ---------------------- podio ---------------------- -->
+                <div class="container-podio disabled" id="container-podio">
+
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-center">
+                            <img src="../../assets/img/iconos-desarrollo/Ellipse 55.png" alt="logo"
+                                class="logito-podio2">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-center">
+                            <div class="col-4 d-flex justify-content-end align-items-end">
+                                <div class="podio1 m-0 d-flex flex-column justify-content-between">
+                                    <div class="d-flex justify-content-center">
+                                        <img src="../../assets/img/iconos-principales/ganador2.png" alt="Imagen de Mark"
+                                            class="img-puesto">
+                                    </div>
+                                    <h1 class="text-center nombre-Jugador">Nombre</h1>
+                                    <h1 class="text-center punText">Puntuación</h1>
+
+                                </div>
+                            </div>
+
+                            <div class="col-4 d-flex justify-content-start align-items-end">
+                                <div class="podio2 m-0 d-flex flex-column justify-content-between">
+                                    <div class="d-flex justify-content-center">
+                                        <img src="../../assets/img/iconos-principales/ganador1.png" alt="Imagen de Mark"
+                                            class="img-puesto">
+                                    </div>
+                                    <h1 class="text-center nombre-Jugador">Nombre</h1>
+                                    <h1 class="text-center punText">Puntuación</h1>
+
+                                </div>
+                            </div>
+
+                            <div class="col-4 d-flex justify-content-end align-items-end">
+                                <div class="podio3 m-0 d-flex flex-column justify-content-between">
+                                    <div class="d-flex justify-content-center">
+                                        <img src="../../assets/img/iconos-principales/ganador3.png" alt="Imagen de Mark"
+                                            class="img-puesto">
+                                    </div>
+                                    <h1 class="text-center nombre-Jugador">Nombre</h1>
+                                    <h1 class="text-center punText">Puntuación</h1>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
